samples/_failures_safe/1761437321_fc66c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68f9f2ee.c: In function ‘main’:
./samples/SAFE/__tmp_68f9f2ee.c:147:5: error: expected declaration or statement at end of input
  147 |     if (token_count < 0) {
      |     ^~
./samples/SAFE/__tmp_68f9f2ee.c:147:5: error: expected declaration or statement at end of input
